--- a/src/AutoGen.SourceGenerator/Template/FunctionCallTemplate.tt
+++ b/src/AutoGen.SourceGenerator/Template/FunctionCallTemplate.tt
@@ -63,7 +63,9 @@ namespace <#=NameSpace#>
                 Name = @"<#=functionContract.Name#>",
 <#}#>
 <#if (functionContract.Description != null) {#>
-                Description = @"<#=functionContract.Description#>",
+                Description = """
+<#=functionContract.Description#>
+""",
 <#}#>
 <#if (functionContract.ReturnType != null) {#>
                 ReturnType = typeof(<#=functionContract.ReturnType#>),
